[package]
name = "throttle-ro"
version = "0.1.2"
edition = "2024"
description = "A configurable throttling service for rate limiting IP-based requests"
license = "MIT OR Apache-2.0"
authors = ["Kak Smko <ba.smko@gmail.com>"]
repository = "https://github.com/kak-smko/throttle-ro"
documentation = "https://docs.rs/throttle-ro"
readme = "README.md"
keywords = ["rate-limiting", "throttle", "api", "security", "cache"]
categories = ["web-programming", "api-bindings"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cache-ro="0.3.1"
